--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -667,7 +667,7 @@ footer {
 			box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);*/
 			.title-container {
 				position: absolute;
-				top: 10px;
+				top: 25px;
 				width: 100%;
 				div.story-title {
 					width:270px;
@@ -675,13 +675,16 @@ footer {
 					margin: 0 auto;
 					background-color: rgba(0, 0, 0, 0.35);
 					color: #eee;
+					border: 1px solid #b7b5b5;
 					/*top: -26px;
 					height: 28px;
-					line-height: 28px;
+					line-height: 28px;*/
 					webkit-box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);
 					-moz-box-shadow: inset 0 -70px 70px -20px rgba(0,0,0,0.65);
-					box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);*/
-
+					box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);
+					.by-owners {
+						color: #b7b5b5;
+					}
 					a{
 						display: inline-block;
 						border-bottom: solid 1px;
