--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -6,7 +6,7 @@
                 <div class="hr"></div>
                 <ul class="row story-bradcrumbs">
                   <li class="span2 current-crumbs"><span class="circle-color-full-disable">1</span> Choose a photo</li>
-                  <li class="span2"><span class="circle-color-full-disable">2</span> Write your story</li>
+                  <li class="span2"><span class="circle-color-full-disable">2</span> Start Writing</li>
                   
                 </ul> 
               </div>
