--- a/app/views/feeds/_feed.html.erb
+++ b/app/views/feeds/_feed.html.erb
@@ -1,7 +1,6 @@
-<% if current_user %>
+<% if (current_user && current_user.stories.size<1) ||  current_user && current_user.admin?%>
 	<div class="alert alert-block">
-	  <button type="button" class="close" data-dismiss="alert">&times;</button>
-	  You may <button class="btn btn-primary userFunction" data-function="startStoryModal" type="button" >Start here</button>
+	  <button class="btn btn-primary userFunction" data-function="startStoryModal" type="button" >Start here</button>
 	</div>
 <%end%>
 
