--- a/app/views/stories/_inner_story.html.erb
+++ b/app/views/stories/_inner_story.html.erb
@@ -1,30 +1,23 @@
-					<div class="story-item">
-						<div class="picture">
-							<%= link_to(story,{title: story.story_title}) do%>
-							<%=  image_tag(image_thumb(story.image))  %>
-						
-							<% end %>
-							<div class="title-container">
-			           <div class="story-title"><%= link_to story.story_title, story%>
-			           
-			           	<div class="by-owners">
-			           		<%=story.user.name%>
-			           		<%= '& 1 feeder' if story.user_count==2%>
-			           		<%= "& #{story.user_count} feeders" if story.user_count>2%> 
-			           		
-			           	</div>
-			           </div>
-	            </div>
-						</div>
-						
-							<div class="item-description alt">
-								<%#= render 'stories/started_by' , :story => story%>
-								
-								<%= render 'stories/story_item' , :story => story%>
-							</div>
-							<%= render 'comments/pre_comments' ,story: story%>
-					
-					</div>
+
+	<div class="picture">
+		<%= link_to(story,{title: story.story_title}) do%>
+		<%=  image_tag(image_thumb(story.image))  %>
+	
+		<% end %>
+		<div class="title-container">
+	     <div class="story-title"><%= link_to story.story_title, story%>
+	     
+	     	<div class="by-owners">
+	     		<%=story.user.name%>
+	     		<%= '& 1 Feeder' if story.user_count==2%>
+	     		<%= "& #{story.user_count} Feeders" if story.user_count>2%> 
+	     		
+	     	</div>
+	     </div>
+    </div>
+	</div>
+	
+	
 
 				
 				
