--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -10,9 +10,9 @@
 		<!-- <h2>The Feeders:</h2> -->
 		<%= render 'stories/big_feeders' ,story: @story%>
 		<h2><%= @story.story_lines.map {|l| l.user}.uniq.size >1 ? 'Present:' : 'Presents' %></h2>
-		
-		<%= render 'layouts/title_hr' , :@hr_name => @story.story_title%>
-
+		<div class="story-header-hr-wrapper">
+			<%= render 'layouts/title_hr' , :@hr_name => @story.story_title%>
+		</div>
 
 	</div>
 	
@@ -25,7 +25,7 @@
 			  <%=  image_tag(@story.image.image_source)  %>
 			</div>
 	  			<%#= render 'stories/started_by' , :story => @story%>
-			  <h1 class="story-title"><%= @story.story_title%></h1>
+			  
 			  <%= render 'stories/story_item' , :story => @story%>
 		</div>
 	  <%= render 'comments/pre_comments' ,story: @story%>
