--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -2,11 +2,11 @@
               <a class="close-modal" data-dismiss="modal"></a>
               <div class="preloader hide"></div>
               <div class="modal-header">
-                <h2>Start a Story</h2>
+                <h2>Start a story</h2>
                 <div class="hr"></div>
                 <ul class="row story-bradcrumbs">
                   <li class="span2 current-crumbs"><span class="circle-color-full-disable">1</span> Choose a photo</li>
-                  <li class="span2"><span class="circle-color-full-disable">2</span> Start Writing</li>
+                  <li class="span2"><span class="circle-color-full-disable">2</span> Start writing</li>
                   
                 </ul> 
               </div>
