--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,6 +65,7 @@ a.link {
 .preloader {
 	background: url('preloader.gif') center center no-repeat;
 }
+
 header {
 	background-color: $background-header;
 	border-bottom: 0;
@@ -443,13 +444,15 @@ footer {
 		text-align:center;
 		border-bottom:2px solid #666;
 		height: 2px;
-		margin:35px 0 35px 0 !important;
+		margin:30px 0 30px 0 !important;
 		h1 {
 			position: relative; top: -0.5em;
 			font-family: 'Lobster' !important;
 			background-color: $background-color;
 			display: inline-block;
 			padding: 0 35px;
+			font-size: 33px;
+			line-height: 11px;
 
 		}
 
@@ -546,6 +549,7 @@ footer {
 	font-size:18px;
 	line-height: 22px;
 	font-weight: 700px;
+	text-align: justify;
 	padding:20px;
 	span {
 		color: #444;
@@ -564,7 +568,7 @@ footer {
 		  text-align: center;
 		  color: #7B0202;
 		  font-family: 'Lobster', cursive !important;
-		  font-size: 20px;
+		  font-size: 23px;
 		  text-transform: capitalize;
 		  background-color: #fff;
 		}
@@ -629,12 +633,17 @@ footer {
 
 
 .dropcap {
-	text-align: left;
-	font-size: 40px;
-	line-height: 43px;
-	max-width: 49px;
+	/*text-align: left;*/
+	font-size: 30px;
+	/*line-height: 48px;
+	max-width: 49px;*/
 	margin: 0;
-	border:0;
+	/*padding-right: 5px;*/
+	/*border:0;
+	display: inline-block;*/
+	/*float: left;*/
+	font-weight: 400;
+	height: 30px;
 
 }
 
@@ -653,10 +662,10 @@ footer {
 	}
 
 	.story-item {
-		/*border: 1px solid #fcfcfc;
+		/*border: 1px solid #fcfcfc;*/
 		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.25);
-    box-shadow: 0px 1px 1px rgba(0,0,0,.25);*/
-    /*overflow: hidden;*/
+    box-shadow: 0px 1px 1px rgba(0,0,0,.25);
+    overflow: hidden;
     background-color: #fff;
 
 		.picture {
@@ -725,9 +734,8 @@ footer {
 				}
 			}
 			.writers {
-				padding-left: 5px;
-				border-bottom: 1px solid #E9E9E9;
-				margin:0;
+				/*border-bottom: 1px solid #E9E9E9;*/
+				margin:0 18px;
 			}
 			form {
 				margin-bottom: 0;
@@ -742,8 +750,10 @@ footer {
 
 	}
 	.comments-dashboard {
-		border: 0;
+		border-top: 1px solid #E9E9E9;
 		height: 18px;
+		margin: 0 18px;
+		padding: 20px 0;
 	}
 
 
@@ -755,62 +765,64 @@ footer {
 
 /* Comments */
 .comments-sec {
-	float:left;
+	
 	width:100%;
 	line-height: 20px;
 	margin-top: -15px;
 }
 
 ul.commentlist {
-	float:left; 
-	width:100%;
-	margin: 0;
+	 
+	background-color: #f5f5f5;
+	overflow: hidden;
+	
 	li {
-		float:left;
-	width: 100%;
-	border-top: 1px solid #e7e7e7;
-	background-color: #f2f2ed;
-
-	.avatar {
-		padding:5px;
-	}
-		.comment-des {
-			width:84%;
+		clear: both;
+		border-top: 1px solid #eee;
+		.comment {
+			margin: 0 18px;
+			padding-top:7px;
+			.avatar , .comment-des {
+				float:left;
+				
+			}
+			.comment-des {
+				max-width: 276px;
+			}
+			.comment-by {
+				padding-bottom: 0;
+			}
 		}
-	}
-	.comment-by {
-		padding-bottom: 0;
+
+		.add-comment {
+			form {
+				margin:0;
+			}
+			textarea {
+				width: 272px;
+				height: 30px;
+			}
+
+			.actions {
+				text-align: right;
+				padding: 5px 0;
+			}
+		}
+
+
 	}
 
 }
 
-.add-comment {
-		float: left;
-		border-top: 1px solid #E7E7E7;
-		width:100%;
-		padding: 10px 5px;
-		background-color: #E3E3E1;
-		.round-avatar {
-			float: left;
-		}
-
-		textarea {
-			width: 80%;
-			height: 30px;
-		}
-
-		.actions {
-			text-align: right;
-			padding: 5px 13px 0 0;
-		}
-}
 
 /* Likes / Unlikes  */
 
 .likes {
 	form {
 		float: right;
-		padding-right: 10px;
+		/*padding-right: 10px;*/
+		position: relative;
+		top: -5px;
 	}
 	div {
 		display: inline;
@@ -818,18 +830,18 @@ ul.commentlist {
 
 }
 
-.like-unregistered {
+.like-unregistered, .flag  ,.btn-liked {
 	float:right;
 }
 .flag {
-	float:right;
+	
 	margin-right: 5px;
 }
 
 /* Story Page */
 
 .story-header-hr-wrapper {
-	width: 780px;
+	width: 580px;
 }
 .story-page {
 	font-size: 14px;
@@ -840,6 +852,9 @@ ul.commentlist {
 		}
 		a, h2 {
 			font-family: $story-font !important;
+		}
+		h2 {
+			line-height: 20px
 		}
 	}
 
@@ -870,7 +885,7 @@ ul.commentlist {
 		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
 		   -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
 			    box-shadow: 0px 1px 1px rgba(0,0,0,.35);
-		width: 780px;	
+		width: 580px;	
 		margin:	0 auto;
 		.story-wrapper {
 			padding: 10px 10px 0px 10px;
@@ -880,6 +895,10 @@ ul.commentlist {
 	.story-title {
 		font-family: $story-font !important;
 		padding-left: 25px;
+	}
+	.story-area {
+		font-size: 25px;
+		line-height: 32px;
 	}
 
 	.widget {
@@ -1192,6 +1211,12 @@ ul.commentlist {
 	.btn-create-story {
 		float: right;
 		text-align: center;
+	}
+
+	#upload-component {
+		#file {
+			display: none;
+		}
 	}
 }
 .social-upload {
