--- a/app/views/stories/_story_item.html.erb
+++ b/app/views/stories/_story_item.html.erb
@@ -5,9 +5,9 @@
 						  		<span class="writer_<%=line.user.id%> <%= @is_user_page && @user.id==line.user_id ? 'emphasis' : ''  %>"><%= index==0 ? drop_cap(line.line) : sanitize(line.line.gsub(/\n/, '<br />'), :tags => %w(br)) %></span>
 						<% end %>
 						<%if story.is_complete%>
-						<div class="the-end">
-							<h5>The End</h5>
-						</div>
+							<div class="the-end">
+								<h5>The End</h5>
+							</div>
 						<% end %>
 						<span class="cs-canvas"></span>
 					</div>
@@ -49,13 +49,13 @@
 					
 			
 				<% if story.is_complete %>
-<div class="post-meta comments-dashboard">
-	<% if story.comments.size>0%>
-	<span><i class="mini-ico-comment"></i><%=link_to "#{story.comments.size} comments", story_url(story) , id: "comment-count-#{story.id}"%></span>
-	<% end%>
-	<%= render 'stories/like_actions' , story: story %>
-	<%= render 'stories/flag_actions' , story: story %>
-</div>
+					<div class="post-meta comments-dashboard">
+						<% if story.comments.size>0%>
+						<span><i class="mini-ico-comment"></i> <%=link_to "#{story.comments.size} Comments", story_url(story) , id: "comment-count-#{story.id}"%></span>
+						<% end%>
+						<%= render 'stories/like_actions' , story: story %>
+						<%= render 'stories/flag_actions' , story: story %>
+					</div>
 					
 		  	<% end %>		
 			</div>
