--- a/app/views/layouts/_image_provider.html.erb
+++ b/app/views/layouts/_image_provider.html.erb
@@ -14,7 +14,7 @@
           </div>
           <div class="span2">
             <a class="userFunction prepare-registartion-modal" data-function="displayUpload"><span class="social-upload upload-cloud"></span>
-                Upload a Photo
+                Upload a photo
              </a>
           </div>
        </div>
