--- a/app/views/comments/_pre_comments.html.erb
+++ b/app/views/comments/_pre_comments.html.erb
@@ -4,7 +4,7 @@
       <% unless story.comments.empty? %>
         <%= render 'comments/show' %>
       <% end  %>
-      <li>
+      <li class="add-comment">
 		<%= render 'comments/new' , :story => story %>
       </li>
     </ul>
