--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,4 +1,4 @@
-$("#comments-<%=@comment.story_id%> ul.commentlist").append("<%= escape_javascript(render('comments/comment')) %>");
+$("<%= j render 'comments/comment' %>").insertBefore($("#comments-<%=@comment.story_id%> ul.commentlist li.add-comment"));
 $("#comment-count-<%=@comment.story_id%>").html("<%= @comment.story.comments.size%> comments");
 if ($('#portfolio-wrapper').length>0)
 	$('#portfolio-wrapper').isotope('reLayout');
