--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -26,7 +26,7 @@ window.fbAsyncInit = ->
     FB.ui
       method: "send"
       name: "Check out Feedficton!"
-      description: "Connect with friends and family to transform your photos into great short stories. Create, Inspire, Share. Have fun, Together."
+      description: "Connect with friends and family to transform your photos into great short stories. Create, Inspire, Share. Have fun. Together."
       link: "http://alpha.feedfiction.com"
     false
 
