--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -2,7 +2,7 @@
 <% content_for :home do %>
   <div class="slider-wrapper">
   	<p>Connect with friends and family to transform your photos into great short stories. 
-Create, Inspire, Share. Have fun, Together.</p>
+Create, Inspire, Share. Have fun. Together.</p>
 
 
 	<!-- 	<div id="da-slider" class="da-slider">
