--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
     <%= display_meta_tags :site => full_title(yield(:title))%>
     <%= stylesheet_link_tag "application", media: "all" %>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lobster' >
-    <link href='http://fonts.googleapis.com/css?family=Vollkorn:400,700' rel='stylesheet' type='text/css'>
+    
+    <link href='http://fonts.googleapis.com/css?family=Sanchez' rel='stylesheet' type='text/css'>
     
     <%= javascript_include_tag "application" %>
     <!-- start: Mobile Specific -->
