--- a/app/views/stories/_start_story.html.erb
+++ b/app/views/stories/_start_story.html.erb
@@ -13,7 +13,7 @@
 		</li>
 		<li>
 			<span class="counter-text">55 words left out of 55</span>
-			<%= f.button 'Feed it', :class => 'btn btn-create-story', disabled: true, disable_with: 'Create story...'%>
+			<%= f.button 'Feed it', :class => 'btn btn-create-story', disabled: true, disable_with: 'Creating story...'%>
 		</li>
 					
 	</ul>		
