--- a/app/views/stories/_story_item.html.erb
+++ b/app/views/stories/_story_item.html.erb
@@ -30,7 +30,7 @@
 						<!-- <div class="continue-story-text-area"> -->
 			              <%= avatar_rounded(current_user) if current_user %>
 			              <div class="textarea-with-button">
-	              			<textarea limit='<%= (add_how_many_words_left story)+1%>' <%= 'unlogged="t"' unless current_user%> name="story_line[line]"  placeholder='Continue the story..'></textarea>
+	              			<textarea limit='<%= (add_how_many_words_left story)+1%>' <%= 'unlogged="t"' unless current_user%> name="story_line[line]"  placeholder='Continue the story...'></textarea>
 			  							
 			  							<div>
 			  								<span class="counter-text"><%= (add_how_many_words_left story)+1%> words left out of 55</span>
@@ -51,7 +51,7 @@
 				<% if story.is_complete %>
 					<div class="post-meta comments-dashboard">
 						<% if story.comments.size>0%>
-						<span><i class="mini-ico-comment"></i> <%=link_to "#{story.comments.size} Comments", story_url(story) , id: "comment-count-#{story.id}"%></span>
+						<span><i class="mini-ico-comment"></i> <%=link_to pluralize(story.comments.size, 'Comment'), story_url(story) , id: "comment-count-#{story.id}"%></span>
 						<% end%>
 						<%= render 'stories/like_actions' , story: story %>
 						<%= render 'stories/flag_actions' , story: story %>
