--- a/app/views/users/show_likes.html.erb
+++ b/app/views/users/show_likes.html.erb
@@ -3,16 +3,12 @@
   <%= render 'user_header' %>
 </section>
 <section>
-	<% if @stories.count>0 %>
-	<h2><%= @user.name %> likes the stories:</h2>
+	<% if @stories.size>0 %>
+	
 	<%= render 'feeds/feed' %>
 	<%else%>
-	<div class="alert">
-		<% if @user==current_user %>
-			<h3>You do not have like yet!</h3> 
-		<% else %>
-			<h3><%= @user.name %> dosen't has like yet</h3>
-		<% end%>
-	</div>
+		<div class="alert">
+			<h3><%=@empty_disclaimer%></h3>
+		</div>
 	<%end%>
 </section>
