--- a/app/views/layouts/_image_provider.html.erb
+++ b/app/views/layouts/_image_provider.html.erb
@@ -7,7 +7,7 @@
           	<%#= link_to image_tag('logos/facebook_logo.jpg'),in_wizard ? import_facebook_wizard_url : facebook_path %>
           </div>
           <div class="span2">
-          	<%= link_to(instagram_url, remote: true ,class: 'userFunction prepare-registartion-modal', 'data-function' => "setPreloader#.modal .preloader") do %>
+          	<%= link_to(instagram_url, remote: true ,class: 'userFunction prepare-registartion-modal start-instagram', 'data-function' => "setPreloader#.modal .preloader", id: 'start-instagram') do %>
                <span class="social-upload upload-instagram"></span>Instagram
           	<%#= link_to image_tag('logos/upload_image.jpg'),'#UploadModal' ,data: { function: 'displayUpload' , dismiss: 'modal'}, class: 'userFunction' %>
                <%end %>
