--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -1,10 +1,9 @@
 <!-- start: Slider -->
 <% content_for :home do %>
+<div class="hp-header">
   <div class="slider-wrapper">
-  	<p>Connect with friends and family to transform your photos into great short stories. 
-Create, Inspire, Share. Have fun. Together.</p>
-
-
+  	<div></div>
+  
 	<!-- 	<div id="da-slider" class="da-slider">
 			<div class="da-slide">
 				<h2>FeedFiction</h2>
@@ -35,6 +34,30 @@ Create, Inspire, Share. Have fun. Together.</p>
 		</div> -->
 		
 	</div>
+	<div class="hp-blocks"	>
+		<div class="container">
+			<div class="anounce">
+				<div>Connect with friends and family to transform your photos into great short stories.</div>
+				<p>
+					<div>Create, Inspire, Share.</div> 
+			 		<div>Have fun. <span class="last-word">Together</span>.</div>
+			 	</p>
+			 	<span class="sign-in">Sign up with Facebook</span>
+		 	</div>
+			
+			<div class="story-panel">
+				<div class="lbl-start-writing hp-labels"></div>
+				<div class="photo-tile"></div>
+				<div class="hp-lbl-container">
+					<div class="lbl-upload-photo hp-labels"></div>
+				 	<div class="lbl-continue hp-labels"></div>
+				</div>
+				
+			</div>
+
+		</div>
+	</div>
+</div>
 	<!-- end: Slider -->
 <% end %>
 	
