--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -299,19 +299,86 @@ footer {
 }
 
 /* Home page */
-.slider-wrapper {
-	background: url('hpcollage_blur.jpg') repeat-x;
-	height: 500px;
+.hp-header {
+	position: relative;
+	.slider-wrapper {
+		background: url('hpcollage_blur.jpg') repeat-x;
+		height: 500px;
+		opacity: 0.3;
+		
+		xdiv {
+			background-color: #fff;
+			width:100%; height: 100%;
+		}
 
-	p {
-		color: #fff;
-		font-size: 30px;
-		margin: 0 auto;
-		width: 500px;
-		position: relative;
-		top: 150px;	
-		line-height: 34px;
 	}
+	.hp-blocks {
+		position: absolute;
+		top: 50px;
+		width: 100%;
+	}
+	.anounce {
+			float: left;
+			color: #000;
+			font-size: 30px;
+			width: 500px;
+			line-height: 40px;
+			p{
+				text-align: center;
+			}
+			.last-word {
+				/*color: #2954C5;*/
+				color: #37809e;
+			}
+
+			.sign-in {
+				background: url('hp_facbook_coonect.png') no-repeat;
+				height: 61px; width: 344px;
+				display: block;
+				color: #EEE;
+				font-size: 23px;
+				padding-left: 69px;
+				line-height: 62px;
+				position: relative;
+				top: 67px;
+				cursor: pointer;
+			}
+			
+		}
+	.story-panel {
+		float: right;
+		width: 560px;
+	}
+
+		.hp-labels {
+			background: url('hp_labels.png') no-repeat;
+			background-repeat: no-repeat;
+			display: block;
+			height: 100px; width: 150px; 
+		}
+		.hp-lbl-container, .photo-tile , .lbl-start-writing{
+			float: left;
+		}
+
+		.lbl-start-writing {
+			height: 250px;
+			background-position: 22px 150px;
+		}
+		.photo-tile {
+			background: url('hp_story_cover.png') no-repeat;
+			display: inline-block;
+			width: 260px;
+			height: 400px;
+		}
+		.lbl-upload-photo {
+			background-position: -280px 27px;
+			height: 234px;
+		}
+		.lbl-continue {
+			background-position: -115px 0;
+		}
+ 
+
 }
 
 /* Photo Stream
