--- a/app/assets/javascripts/feedfiction.js.erb
+++ b/app/assets/javascripts/feedfiction.js.erb
@@ -166,11 +166,11 @@ var feedfiction = {
 
           $(elements).bind({
             mouseenter: function() {
-              $(elements).css('font-weight','bold');
+              $(elements).css('color','#29A9DF');
               $(elements).last().find('.round-avatar').addClass('round-avatar-border');
             },
             mouseleave: function() {
-              $(elements).css('font-weight','normal');
+              $(elements).css('color','#444');
               $(elements).last().find('.round-avatar').removeClass('round-avatar-border');
               
                
