--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
      <!--start: Logo -->
       <div class="logo span3">
         <!-- <i class="mini-white mini-ico-bookmark circle-color-full"></i> -->
-<%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand" %>
+<%= link_to  content_tag(:span ,'Feed') + 'fiction', root_path, id: "logo" , class: "brand" %>
 
         <!-- <a class="brand" href="#">Feed<span>fiction</span></a> -->
       </div>
