--- a/app/assets/stylesheets/icons.css
+++ b/app/assets/stylesheets/icons.css
@@ -1484,7 +1484,7 @@
   height: 14px;
   *margin-right: .3em;
   line-height: 14px;
-  vertical-align: text-top;
+  vertical-align: -2px;
   background-image: url("icons/glyphicons-mini.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
