--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -39,7 +39,7 @@
 			<div class="anounce">
 				<div>Connect with friends and family to transform your photos into great short stories.</div>
 				<p>
-					<div>Create, Inspire, Share.</div> 
+					<div><!-- Create, Inspire, Share. --></div> 
 			 		<div>Have fun. <span class="last-word">Together</span>.</div>
 			 	</p>
 			 	<span class="sign-in">Sign up with Facebook</span>
