--- a/app/views/stories/_story_item.html.erb
+++ b/app/views/stories/_story_item.html.erb
@@ -47,16 +47,10 @@
 
 				</div>
 					
-			
+			<div id="actions-item-<%=story.id%>">
 				<% if story.is_complete %>
-					<div class="post-meta comments-dashboard">
-						<% if story.comments.size>0%>
-						<span><i class="mini-ico-comment"></i> <%=link_to pluralize(story.comments.size, 'Comment'), story_url(story) , id: "comment-count-#{story.id}"%></span>
-						<% end%>
-						<%= render 'stories/like_actions' , story: story %>
-						<%= render 'stories/flag_actions' , story: story %>
-					</div>
-					
-		  	<% end %>		
-			</div>
+					<%= render 'stories/actions' , story: story%>
+				<% end %>	
+			</div>		
+		</div>
 			
