--- a/app/views/story_lines/create.js.erb
+++ b/app/views/story_lines/create.js.erb
@@ -3,4 +3,7 @@ if ($('#story-<%=@story.id%>').length >0){
 }
 
 $("#story-item-<%=@story.id%>").html("<%= escape_javascript(render('stories/story_item' , :story => @story ))%>");
+<% if @story.is_complete %>
+
+<%end%>
 //feedfiction.actions.continueStory("<%=@story.id%>");
