--- a/app/views/stories/_story_item.html.erb
+++ b/app/views/stories/_story_item.html.erb
@@ -2,7 +2,7 @@
 				<div class="story-with-owners">
 					<div class="story-area">
 						<% story.story_lines.each_with_index do |line,index| %>
-						  		<span class="writer_<%=line.user.id%> <%= @is_user_page && @user.id==line.user_id ? 'emphasis' : ''  %>"><%= index==0 ? drop_cap(line.line) : sanitize(line.line.gsub(/\n/, '<br />'), :tags => %w(br)) %></span>
+						  		<span class="hover-line writer_<%=line.user.id%> <%= @is_user_page && @user.id==line.user_id ? 'emphasis' : ''  %>"><%= index==0 ? drop_cap(line.line) : sanitize(line.line.gsub(/\n/, '<br />'), :tags => %w(br)) %></span>
 						<% end %>
 						<%if story.is_complete%>
 							<div class="the-end">
